--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
     - DT_DATASET_FILENAME=${DATASET_FILENAME:-dummy.txt}
     - DT_DATASET_INPUT_PATH=/dataset/input
     - DT_DATASET_OUTPUT_PATH=/dataset/output
+    - DT_DATASET_OUTPUT_FILENAME=$DATASET_OUTPUT_FILENAME
+    - DT_DATASET_OUTPUT_FORMAT=$DATASET_OUTPUT_FORMAT
     volumes:
     - ${PWD}/test/success/${TEST_DIR:-1}:/dataset
     deploy:
