--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
     - DT_DATASET_OUTPUT_PATH=/dataset/output
     - DT_DATASET_OUTPUT_FILENAME=$DATASET_OUTPUT_FILENAME
     - DT_DATASET_OUTPUT_FORMAT=$DATASET_OUTPUT_FORMAT
+    - DT_DATASET_EXTRA_VARIABLES=$DATASET_EXTRA_VARIABLES
     volumes:
     - ${PWD}/test/success/${TEST_DIR:-1}:/dataset
     deploy:
