--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,11 +20,11 @@ services:
     - DT_DATASET_FILENAME=${DATASET_FILENAME:-dummy.txt}
     - DT_DATASET_INPUT_PATH=/dataset/input
     - DT_DATASET_OUTPUT_PATH=/dataset/output
-    - DT_DATASET_OUTPUT_FILENAME=$DATASET_OUTPUT_FILENAME
+    - DT_DATASET_EXTRA_VARIABLES=${DATASET_EXTRA_VARIABLES}
     - DT_DATASET_OUTPUT_FORMAT=$DATASET_OUTPUT_FORMAT
-    - DT_DATASET_EXTRA_VARIABLES=$DATASET_EXTRA_VARIABLES
+    - DT_DATASET_OUTPUT_FILENAME=$DATASET_OUTPUT_FILENAME
     volumes:
-    - ${PWD}/test/success/${TEST_DIR:-1}:/dataset
+    - ${PWD}/test/${TEST_TYPE:-success}/${TEST_DIR:-1}:/dataset
     deploy:
       resources:
         limits:
